========================
   beancount: CHANGES
========================
Note: This file contains only changes in the 'default' branch.


2018-02-17

  - Merged a change submitted by @droogmic to add options for the dateutils
    parser, in order to disambiguate between day-first (DD-MM-YYYY) vs.
    month-first (MM-DD-YYYY) date representations.

  - Created a new plugin "check_closing" that automatically inserts a zero
    balance check after postings which are known - and flagged, using metadata -
    to be closing trades.

  - Fixed bug in "sellgains" plugin whereby a price of zero units failed an
    assertion. Added a test.


2018-02-12

  - Added a side-effects local variable saver utility for writing importers.

  - Fixed #212: Clarified error message for error in covering non-aggregate
    targets.

  - The Importer.extract() method now accepts a new parameters with the prior
    entries (or None, if not specified) as 'existing_entries'. It's free to use
    that as it pleases in order to flag entries as duplicates. The entries
    returned by Importer.extract() will be checked for __duplicate__ metadata
    and automatically inserted to that set if it is present. This allows the
    importer to return some duplicate entries for context - which will be
    rendered as such in the output, e.g. commented out - without having to
    necessarily throw them away.

    (The previous signature is still supported in order to avoid breaking
    everyone's importers.)


2018-01-31

  - Modified 'divert_expenses' plugin to store the original account name as
    metadata of diverted postings, so that they can be picked up by the
    extract_tagged script and brought back into the extract file.


2018-01-29

  - Created a new 'divert_expenses' plugin to redirect Expenses postings from
    transactions tagged with a particular tag to another account. See this
    thread for details: